--- a/index.html
+++ b/index.html
@@ -167,12 +167,17 @@
 
         <section id="trailer">
             <h2>Trailers</h2>
-
-            <iframe width="854" height="480" src="https://www.youtube.com/embed/TXxQFMG86HA" frameborder="0" allowfullscreen id="trailer1"></iframe>
-
-            <iframe width="854" height="480" src="https://www.youtube.com/embed/IGEV13kGl9s" frameborder="0" allowfullscreen></iframe>
-        </section>
+			<div class="row">
+			<div class="col-md-6 col-xs-12">
+				<iframe width="854" height="480" src="https://www.youtube.com/embed/TXxQFMG86HA" frameborder="0" allowfullscreen ></iframe>
+			</div>
+			<div class="col-md-6 col-xs-12">
+				<iframe width="854" height="480" src="https://www.youtube.com/embed/IGEV13kGl9s" frameborder="0" allowfullscreen></iframe>
+			</div>
+			</div>
+		</section>
     </div>
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="script-tenac.js"></script>
 </body>
