--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <div class="col-xs-12 col-md-6 tam_min tam_max">
                     <figure id="poster_tenac">
-                        <img src="http://2.media.collegehumor.cvcdn.com/89/68/92a1fb1017d6644e93ac6204c558af74-tenacious-d-in-the-pick-of-destiny.jpg" alt="Tenacious D" title="Tenacious D" class="img-responsive" />
+                        <img src="img/img_tenac01.jpg" alt="Tenacious D" title="Tenacious D" class="img-responsive" />
                     </figure>
                 </div>
 
@@ -82,31 +82,31 @@
             <h2>Elenco</h2>
 
             <div class="col-md-2 col-xs-6 col-act">
-                <figure class="ator"><img src="https://tvcinemaemusica.files.wordpress.com/2010/08/jackblack_l.jpg" alt="Jack Balack" title="Jack Balack - JB" />
+                <figure class="ator"><img src="img/jackblack.jpg" alt="Jack Balack" title="Jack Balack - JB" />
                     <figcaption>Jack Balack</figcaption>
                 </figure>
             </div>
             <div class="col-md-2 col-xs-6 col-act">
-                <figure class="ator"><img src="http://www.vokrug.tv/pic/person/e/4/3/1/e431483d0e298591bdacf04d7ceade4f.jpeg" alt="Kyle Gass" title="Kyle Gass - KG" />
+                <figure class="ator"><img src="img/kyle_gass.jpeg" alt="Kyle Gass" title="Kyle Gass - KG" />
                     <figcaption>Kyle Gass</figcaption>
                 </figure>
             </div>
             <div class="col-md-2 col-xs-6 col-act">
-                <figure class="ator"><img src="http://digitalspyuk.cdnds.net/14/45/1280x1749/gallery_20140912_redbull_foofighters_shoot_0117v4_verl.jpg" alt="Dave Grohl" title="Dave Grohl - Satã" />
+                <figure class="ator"><img src="img/dave_grohl.jpg" alt="Dave Grohl" title="Dave Grohl - Satã" />
                     <figcaption>Dave Grohl</figcaption>
                 </figure>
             </div>
             <div class="col-md-2 col-xs-6 col-act">
-                <figure class="ator"><img src="https://tvcinemaemusica.files.wordpress.com/2010/02/tim-robbins.jpg" alt="Tim Robbins" title="Tim Robbins - O Estranho" />
+                <figure class="ator"><img src="img/tim-robbins.jpg" alt="Tim Robbins" title="Tim Robbins - O Estranho" />
                     <figcaption>Tim Robbins</figcaption>
                 </figure>
             </div>
             <div class="col-md-2 col-xs-6 col-act">
-                <figure class="ator"><img src="http://3.bp.blogspot.com/_s2ALKnFb-GY/S_C9XUO3oPI/AAAAAAAAAIA/w3PGtxwchF4/s320/ronniediophoto.jpg" alt="Ronnie James Dio" title="Ronnie James Dio - DIO" /></figure>
+                <figure class="ator"><img src="img/dio.jpg" alt="Ronnie James Dio" title="Ronnie James Dio - DIO" /></figure>
                 <figcaption>Ronnie James Dio</figcaption>
             </div>
             <div class="col-md-2 col-xs-6 col-act">
-                <figure class="ator"><img src="http://media2.popsugar-assets.com/files/users/0/88/11_2007/56000329.xlarge.jpg" alt="Ben Stiller" title="Ben Stiller - Vendedor de Guitarras" />
+                <figure class="ator"><img src="img/ben-stiller.jpg" alt="Ben Stiller" title="Ben Stiller - Vendedor de Guitarras" />
                     <figcaption>Ben Stiller</figcaption>
                 </figure>
             </div>
@@ -119,17 +119,17 @@
             <div id="imagemDesktop" class="row">
                 <div class="col-md-2">
                     <div class="thumbnail" id="img01">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/b/b6/Tenacious_d_in_the_pick_of_destiny_ver3.jpg" alt="imagem" onclick="verImagem('img01', 'https://upload.wikimedia.org/wikipedia/en/b/b6/Tenacious_d_in_the_pick_of_destiny_ver3.jpg')" />
+                        <img src="img/img_tenac02.jpg" alt="imagem" onclick="verImagem('img01', 'img/img_tenac02.jpg')" />
                     </div>
                     <div class="thumbnail" id="img02">
-                        <img src="http://ia.media-imdb.com/images/M/MV5BMTUyMDA3OTc4MV5BMl5BanBnXkFtZTcwNzE5NjkzMQ@@._V1_SX640_SY720_.jpg" alt="imagem" onclick="verImagem('img02', 'http://ia.media-imdb.com/images/M/MV5BMTUyMDA3OTc4MV5BMl5BanBnXkFtZTcwNzE5NjkzMQ@@._V1_SX640_SY720_.jpg')" />
+                        <img src="img/img_tenac03.jpg" alt="imagem" onclick="verImagem('img02', 'img/img_tenac03.jpg')" />
                     </div>
                     <div class="thumbnail" id="img03">
-                        <img src="http://dvdmedia.ign.com/dvd/image/article/768/768752/tenacious-d-in-the-pick-of-destiny-20070227055529531-000.jpg" alt="imagem" onclick="verImagem('img03', 'http://dvdmedia.ign.com/dvd/image/article/768/768752/tenacious-d-in-the-pick-of-destiny-20070227055529531-000.jpg')" />
+                        <img src="img/img_tenac04.jpg" alt="imagem" onclick="verImagem('img03', 'img/img_tenac04.jpg')" />
                     </div>
                 </div>
                 <div id="imagem" class="col-md-10">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/b/b6/Tenacious_d_in_the_pick_of_destiny_ver3.jpg" alt="imagem" class="thumbnail" />
+                    <img src="img/img_tenac02.jpg" alt="imagem" class="thumbnail" />
                 </div>
             </div>
 
