Ajuste de imagem no projeto para mobile

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="https://upload.wikimedia.org/wikipedia/en/b/b6/Tenacious_d_in_the_pick_of_destiny_ver3.jpg" alt="imagem">
+                        <img src="img/img_tenac02.jpg" alt="imagem">
                     </div>
                     <div class="item">
-                        <img src="http://ia.media-imdb.com/images/M/MV5BMTUyMDA3OTc4MV5BMl5BanBnXkFtZTcwNzE5NjkzMQ@@._V1_SX640_SY720_.jpg" alt="imagem">
+                        <img src="img/img_tenac03.jpg" alt="imagem">
                     </div>
                     <div class="item">
-                        <img src="http://dvdmedia.ign.com/dvd/image/article/768/768752/tenacious-d-in-the-pick-of-destiny-20070227055529531-000.jpg" alt="imagem">
+                        <img src="img/img_tenac04.jpg" alt="imagem">
                     </div>
                 </div>
 
