Ultimos ajustes na página

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <section>
             <h2>Imagens</h2>
-            <!-- tela > 1000px -->
+            <!-- Para telas grandes -->
             <div id="imagemDesktop" class="row">
                 <div class="col-md-2">
                     <div class="thumbnail" id="img01">
@@ -133,7 +133,7 @@
                 </div>
             </div>
 
-            <!-- tela < 1000px -->
+            <!-- Para telas pequenas e médias -->
             <div id="imagemMobile" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -142,7 +142,7 @@
                     <li data-target="#imagemMobile" data-slide-to="2"></li>
                 </ol>
 
-                <!-- Wrapper for slides -->
+                <!-- Função de slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
                         <img src="img/img_tenac02.jpg" alt="imagem">
@@ -155,7 +155,7 @@
                     </div>
                 </div>
 
-                <!-- Controls -->
+                <!-- Botões de rolagem -->
                 <a class="left carousel-control" href="#imagemMobile" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 </a>
